# FileSystemPosix

./: .editorconfig  .gitignore  LICENSE  Posix.FileSystem.Permissions.sln  README.md  package-lock.json
.github/workflows/: build.yaml  documentation.yaml  dotnet-core.yml  release.yml  stylecheck.yml  tag.yaml
csharp/: .editorconfig  Directory.Build.props  Directory.Build.targets  InteropResultGeneration.targets
csharp/src/: Backend.Adaptable.cs  Backend.Dummy.cs  Backend.Linux.cs  Backend.OsX.cs  Backend.Posix.cs  Backend.Unix.cs  Backend.Windows.Simple.cs  Backend.cs  BackendFactory.cs  BackendSettings.cs  Delegates.cs  FileSystem.cs  FileSystemAttributes.cs  FileSystemEntries.cs  FileSystemInfoExtensions.cs  FileSystemPermission.cs  FileSystemPermissionConverter.cs  FileSystemPermissionExtensions.cs  FileSystemPermissions.cs  NativeLibContent.targets  Posix.FileSystem.Permissions.csproj
csharp/src/Linux/: NativeMethods.cs
csharp/src/OsX/: NativeMethods.cs
csharp/src/Posix/: NativeErrorCodes.cs  NativeMethods.cs
csharp/test/: Posix.FileSystem.Permissions.Tests.csproj
definitions.d/Enums/FsError/: 2.UserNotFound  3.GroupNotFound  4.OsStringConversion
docs/adr/: index.md
rs/: .editorconfig  Cargo.toml  build.rs  rustfmt.toml
rs/src/: lib.rs
rs/src/file_system/: errors.rs  fs.rs  marshal.rs  mod.rs  nibble.rs  owner.rs  perms.rs
