[package]
name = "posix_permissions"
version = "0.7.0"
authors = ["Carsten Igel"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 's'  # Optimize for size.
lto = true # Link Time Optimization (LTO)

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "^0.2"
users = "^0.11"
